--- a/static/css/index.css
+++ b/static/css/index.css
@@ -354,7 +354,9 @@ div.bootbox.modal.fade.in + div {
   font-size: 10px;
   z-index: 100000;
   position:absolute;
-  background-color: #5A55A3;
+  color: white;
+  opacity: 0.9;
+  background-color: #202020;
   width:250px;
   margin-top:30px;
   margin-left:62px;
