--- a/templates/italiansushi/about.html
+++ b/templates/italiansushi/about.html
@@ -108,7 +108,12 @@
 	                	<p> requirements to upload an item set: </p>
 	                <h3>Matchup Item Set Generator</h2>
 	                	<p> must specify at least 'your champion', other fields may be left blank</p>
-                    <p>
+                    <h3>Updated Data</h3>
+                    <p>For anyone wondering how recent our data is...:</p>
+                    <p>     Item Data was last updated on 8/30/2015 01:48</p>
+                    <p>     Champion Data was last updated on 8/30/2015 01:50</p>
+                    <p>     Summoner Data was last updated on 8/30/2015 01:55</p>
+                    <p>     Match Data was last updated on 8/30/2015 03:32</p>
                     To return back to the main page, click
                     <a href="/">here</a>.
                     </p>
